# bot_helper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 0cdd55c528ae_.py  0f1c021d21c7_add_username_column_in_user_table.py  396ee0ad50c2_.py  39aaead3ce91_.py  404ced0777ef_add_task_table.py  41e1d9dae23f_.py  4a434a112e79_add_user_table.py  53acab953193_.py  5ca68f725d07_change_datetime_to_date_in_task_table.py  6489c194e23a_.py  7412378df8b9_add_start_date_column_in_done_task_table.py  83f9a1bce4e5_change_datetime_to_date_in_task_table.py  b35a4890b9da_add_first_name_and_last_name_in_user_.py  c9dd1c2fd839_add_tables.py  cd3aee97624c_.py  d05453c72166_.py  d8a77f322c47_.py  da8fb5aa1247_.py  efe604cce127_delete_task_id_from_done_task.py  ff59c13d4c19_change_datetime_to_date_in_task_table.py
src/: config.py  main.py
src/bot/: __init__.py  setup.py
src/bot/events/: algo_courses.py  notes.py  task.py
src/bot/handlers/: algo_courses.py  info.py  notes.py  task.py
src/bot/keybords/: algo_courses.py  notes.py  task.py
src/database/: formatters.py  orm.py  repository.py  session.py
src/domain/: bussines_rules.py  exceptions.py  models.py
src/domain/business_layer/: algo_courses.py
src/domain/events/: task_events.py
src/service/: formatters.py  uow.py
tests/unit/: test_rules.py  test_service.py
