[tool.poetry]
name = "bothelper"
version = "0.1.0"
description = "Daily bot helper"
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.8"
python-dotenv = "^1.0.0"
aiogram = "^2.25.1"
alembic = "^1.10.2"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
loguru = "^0.6.0"
pytest = "^7.2.2"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "src.main:main"
