[tool.poetry]
name = "bothelper"
version = "0.1.0"
description = "Daily bot helper"
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.8"
python-dotenv = "^1.0.0"
aiogram = "^2.25.1"
alembic = "^1.10.2"
flake8 = "^6.0.0"
pytest = "^7.3.0"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
loguru = "^0.6.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "src.main:main"
